# aks-mcp-server

./: .gitignore  Dockerfile  LICENSE  README.md  mcpo-config.json  pyproject.toml  setup.py
src/azuremcp/: __init__.py  containerservice.py  context.py  graph.py  network.py  resource.py
